# Lazel_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Debug/lib/: libLazel.dylib  libglad.dylib
Lazel/: CMakeLists.txt
Lazel/include/: Lazel.h  lzpch.hpp
Lazel/include/Events/: Events.h  MouseEvent.h
Lazel/include/Lazel/: Application.h  Core.h  EntryPoint.h  Layer.h  Log.h  Window.h
Lazel/src/: Application.cpp  CMakeLists.txt  Layer.cpp  LayerStack.cpp  Log.cpp
Lazel/src/Lazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Window.h
Lazel/src/Lazel/Events/: ApplicationEvent.h  Events.h  KeyEvent.h  MouseEvent.h
Lazel/src/Lazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Lazel/src/Platform/MacOs/: MacWindow.cpp  MacWindow.h
SandBox/src/: CMakeLists.txt  SandboxApp.cpp
